build: bump project version to v0.3.6

--- a/linux/debian/DEBIAN/control
+++ b/linux/debian/DEBIAN/control
@@ -1,10 +1,10 @@
 Package: harmonoid
-Version: 0.3.5-1
+Version: 0.3.6-1
 Section: base
 Priority: optional
 Homepage: https://github.com/harmonoid/harmonoid
 Architecture: amd64
-Depends: mpv, libmpv-dev
+Depends: libmpv2
 Maintainer: Hitesh Kumar Saini <saini123hitesh@gmail.com>
 Description: Harmonoid
   Plays & manages your music library. Looks beautiful & juicy.
