--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -73,9 +73,9 @@ jobs:
       - name: Release Snapshot
         uses: softprops/action-gh-release@v1
         env:
-          GITHUB_REPOSITORY: harmonoid/harmonoid-snapshots
+          GITHUB_REPOSITORY: harmonoid/snapshots
         with:
-          repository: harmonoid/harmonoid-snapshots
+          repository: harmonoid/snapshots
           draft: false
           prerelease: true
           body: ${{ github.sha }}
@@ -166,9 +166,9 @@ jobs:
       - name: Release Snapshot
         uses: softprops/action-gh-release@v1
         env:
-          GITHUB_REPOSITORY: harmonoid/harmonoid-snapshots
+          GITHUB_REPOSITORY: harmonoid/snapshots
         with:
-          repository: harmonoid/harmonoid-snapshots
+          repository: harmonoid/snapshots
           draft: false
           prerelease: true
           body: ${{ github.sha }}
