--- a/pubspec.linux.yaml
+++ b/pubspec.linux.yaml
@@ -52,6 +52,7 @@ dependencies:
 
   ffi: ^2.0.1
   win32: ^3.0.0
+  dynamic_color: ^1.6.2
   just_audio: ^0.9.28
   audio_service: ^0.18.7
   awesome_notifications: ^0.7.0-beta.5
