--- a/linux/debian/DEBIAN/control
+++ b/linux/debian/DEBIAN/control
@@ -4,7 +4,7 @@ Section: base
 Priority: optional
 Homepage: https://github.com/harmonoid/harmonoid
 Architecture: amd64
-Depends: libmpv2
+Depends: mpv, libmpv-dev
 Maintainer: Hitesh Kumar Saini <saini123hitesh@gmail.com>
 Description: Harmonoid
   Plays & manages your music library. Looks beautiful & juicy.
