--- a/pubspec.linux.yaml
+++ b/pubspec.linux.yaml
@@ -86,10 +86,12 @@ dependencies:
   infinite_scroll_pagination: ^3.1.0
   readmore: ^2.1.0
   fluentui_system_icons: ^1.1.136
-  material_floating_search_bar: ^0.3.6
+  material_floating_search_bar:
+    git: https://github.com/alexmercerind/material_floating_search_bar_bxqm.git
   collection: any
   substring_highlight: ^1.0.33
-  extended_image: ^6.0.2
+  extended_image:
+    git: https://github.com/chaudharydeepanshu/extended_image.git
   auto_size_text: ^3.0.0
   uuid: ^3.0.6
   synchronized: ^3.0.0+2
