--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -100,7 +100,7 @@ jobs:
         run: echo ${{ steps.vars.outputs.sha_short }}
       - uses: subosito/flutter-action@v1
         with:
-          channel: "stable"
+          channel: "master"
 
       - run: sudo apt-get update
       - run: sudo apt-get install clang cmake ninja-build pkg-config libgtk-3-dev mpv libmpv-dev dpkg-dev rpm tree
@@ -123,6 +123,7 @@ jobs:
 
       - run: flutter config --enable-linux-desktop
       - run: flutter pub get
+      - run: git apply patches/disable-linux-route-snapshotting.patch
       - run: flutter build linux --verbose
 
       - run: chmod +x build/linux/x64/release/bundle/data/flutter_assets/assets/platform/tag_reader
