--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -107,6 +107,7 @@ jobs:
 
       - run: rm -r "assets/icons"
       - run: mkdir "assets/icons"
+
       - run: rm pubspec.yaml
       - run: mv pubspec.linux.yaml pubspec.yaml
 
@@ -192,7 +193,7 @@ jobs:
         run: echo ${{ steps.vars.outputs.sha_short }}
       - uses: subosito/flutter-action@v1
         with:
-          channel: "stable"
+          channel: "master"
 
       - name: Create Key Store
         id: create_key_store
@@ -219,6 +220,7 @@ jobs:
       - run: mkdir "assets/preloaded_visuals"
 
       - run: flutter pub get
+      - run: git apply patches/disable-android-route-snapshotting.patch
       - run: flutter build apk --verbose --split-per-abi
       - run: cp build/app/outputs/flutter-apk/app-arm64-v8a-release.apk harmonoid-android-arm64-v8a-release.apk
       - run: cp build/app/outputs/flutter-apk/app-armeabi-v7a-release.apk harmonoid-android-armeabi-v7a-release.apk
