--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -24,7 +24,7 @@ jobs:
         run: echo ${{ steps.vars.outputs.sha_short }}
       - uses: subosito/flutter-action@v1
         with:
-          channel: "stable"
+          channel: "master"
 
       - run: |
           rmdir /s /q "assets/fonts"
@@ -124,7 +124,6 @@ jobs:
 
       - run: flutter config --enable-linux-desktop
       - run: flutter pub get
-      - run: git apply --reject --whitespace=fix patches/disable-linux-route-snapshotting.patch
       - run: flutter build linux --verbose
 
       - run: chmod +x build/linux/x64/release/bundle/data/flutter_assets/assets/platform/tag_reader
@@ -218,9 +217,6 @@ jobs:
       - run: mkdir "assets/icons"
       - run: rm -r "assets/preloaded_visuals"
       - run: mkdir "assets/preloaded_visuals"
-
-      - run: git apply --reject --whitespace=fix patches/flutter-master-dependencies.patch
-      - run: git apply --reject --whitespace=fix patches/disable-android-route-snapshotting.patch
 
       - run: flutter pub get
       - run: flutter build apk --verbose --split-per-abi
