--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
     git:
       url: https://github.com/alexmercerind/dart_discord_rpc.git
       ref: 48a15a750d9ee50c521a408c466bd681321a38e2
+  drift: ^2.15.0
   dynamic_color: ^1.6.9
   ffi: ^2.0.1
   file_picker: ^6.1.1
@@ -41,10 +42,12 @@ dependencies:
   media_kit_libs_audio: ^1.0.4
   media_library:
     path: external/media_library
-  path: ^1.8.0
+  path: ^1.9.0
+  path_provider: ^2.1.2
   permission_handler: ^11.3.0
   provider: ^6.0.1
   share_plus: ^2.1.4
+  sqlite3_flutter_libs: ^0.5.0
   substring_highlight: ^1.0.33
   syncfusion_flutter_datagrid: ^24.2.7
   synchronized: ^3.0.0+2
@@ -59,8 +62,11 @@ dependencies:
     git:
       url: https://github.com/alexmercerind/windows_taskbar.git
       ref: b3273d58aab9d71f61b51a84d5c6fb6cf0821529
+  sqlite3: ^2.4.0
 
 dev_dependencies:
+  build_runner: ^2.4.8
+  drift_dev: ^2.15.0
   flutter_lints: ^3.0.1
 
 flutter:
