--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   animations: ^2.0.0
   audio_service: ^0.18.7
   awesome_notifications: ^0.7.0-beta.5
+  collection: ^1.18.0
   dart_discord_rpc:
     git:
       url: https://github.com/alexmercerind/dart_discord_rpc.git
@@ -47,6 +48,7 @@ dependencies:
   permission_handler: ^11.3.0
   provider: ^6.0.1
   share_plus: ^2.1.4
+  sqlite3: ^2.4.0
   sqlite3_flutter_libs: ^0.5.0
   substring_highlight: ^1.0.33
   syncfusion_flutter_datagrid: ^24.2.7
@@ -55,14 +57,13 @@ dependencies:
     path: external/smtc-win32/bindings/system_media_transport_controls.dart
   tag_reader:
     path: external/tag_reader
-  uri_parser: ^2.0.0
+  uri_parser: ^2.0.2
   url_launcher: ^6.1.3
   win32: ^5.2.0
   windows_taskbar:
     git:
       url: https://github.com/alexmercerind/windows_taskbar.git
       ref: b3273d58aab9d71f61b51a84d5c6fb6cf0821529
-  sqlite3: ^2.4.0
 
 dev_dependencies:
   build_runner: ^2.4.8
