--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
       ref: 48a15a750d9ee50c521a408c466bd681321a38e2
   drift: ^2.15.0
   dynamic_color: ^1.6.9
-  ffi: ^2.0.1
+  ffi: ^2.1.2
   file_picker: ^6.1.1
   fluentui_system_icons: ^1.1.136
   flutter_lyric:
@@ -30,7 +30,6 @@ dependencies:
       url: https://github.com/alexmercerind/flutter_lyric.git
       ref: master
   flutter_svg: ^1.1.4
-  extended_image: ^8.1.1
   http: ^1.2.1
   known_extents_list_view_builder:
     git:
@@ -65,6 +64,7 @@ dependencies:
     path: external/tag_reader
   uri_parser: ^2.0.2
   url_launcher: ^6.1.3
+  uuid: ^4.3.3
   win32: ^5.2.0
   windows_taskbar:
     git:
