build: add vector assets

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,4 +86,5 @@ flutter:
     - assets/images/
     - assets/translations/
     - assets/translations/translations/
+    - assets/vectors/
     - assets/visuals/
