--- a/scripts/configuration_keys.json
+++ b/scripts/configuration_keys.json
@@ -5,7 +5,7 @@
   {"key": "DESKTOP_NOW_PLAYING_LYRICS", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
   {"key": "DESKTOP_NOW_PLAYING_UNHIGHLIGHTED_LYRICS_SIZE", "serializedType": "Integer", "dartType": "int", "default": "14"},
   {"key": "DISCORD_RPC", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
-  {"key": "LANGUAGE", "serializedType": "Json", "dartType": "LanguageData", "default": "const LanguageData(code: 'en_US', name: 'English (United States)', country: 'United States')"},
+  {"key": "LOCALIZATION", "serializedType": "Json", "dartType": "LocalizationData", "default": "const LocalizationData(code: 'en_US', name: 'English (United States)', country: 'United States')"},
   {"key": "LRC_FROM_DIRECTORY", "serializedType": "Boolean", "dartType": "bool", "default": "false"},
   {"key": "MEDIA_LIBRARY_ADD_TRACKS_TO_PLAYLIST", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
   {"key": "MEDIA_LIBRARY_ALBUM_GROUPING_PARAMETERS", "serializedType": "Json", "dartType": "Set<AlbumGroupingParameter>", "default": "[AlbumGroupingParameter.album.index]"},
