--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   media_kit_libs_audio: ^1.0.4
   media_library:
     path: external/media_library
+  mesh_gradient: ^1.3.7
   mpris_service:
     git:
       url: https://github.com/alexmercerind/mpris_service.git
