build(deps): auto_size_text

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     path: external/adaptive_layouts
   animations: ^2.0.0
   audio_service: ^0.18.7
+  auto_size_text: ^3.0.0
   awesome_notifications: ^0.7.0-beta.5
   collection: ^1.18.0
   crypto: ^3.0.3
