--- a/scripts/configuration_keys.json
+++ b/scripts/configuration_keys.json
@@ -1,13 +1,16 @@
 [
   {"key": "AUDIO_FORMAT_DISPLAY", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
   {"key": "DESKTOP_NOW_PLAYING_BAR_COLOR_PALETTE", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
-  {"key": "DESKTOP_NOW_PLAYING_CAROUSEL", "serializedType": "Integer", "dartType": "int", "default": "0"},
-  {"key": "DESKTOP_NOW_PLAYING_HIGHLIGHTED_LYRICS_SIZE", "serializedType": "Integer", "dartType": "int", "default": "32"},
-  {"key": "DESKTOP_NOW_PLAYING_LYRICS", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
-  {"key": "DESKTOP_NOW_PLAYING_UNHIGHLIGHTED_LYRICS_SIZE", "serializedType": "Integer", "dartType": "int", "default": "14"},
+  {"key": "DESKTOP_NOW_PLAYING_SCREEN_CAROUSEL", "serializedType": "Integer", "dartType": "int", "default": "0"},
+  {"key": "DESKTOP_NOW_PLAYING_SCREEN_LYRICS", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
   {"key": "DISCORD_RPC", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
   {"key": "LOCALIZATION", "serializedType": "Json", "dartType": "LocalizationData", "default": "const LocalizationData(code: 'en_US', name: 'English (United States)', country: 'United States')"},
   {"key": "LRC_FROM_DIRECTORY", "serializedType": "Boolean", "dartType": "bool", "default": "false"},
+  {"key": "LYRICS_VIEW_FOCUSED_FONT_SIZE", "serializedType": "Double", "dartType": "double", "default": "64.0"},
+  {"key": "LYRICS_VIEW_FOCUSED_LINE_HEIGHT", "serializedType": "Double", "dartType": "double", "default": "1.2"},
+  {"key": "LYRICS_VIEW_TEXT_ALIGN", "serializedType": "Integer", "dartType": "TextAlign", "default": "TextAlign.start.index"},
+  {"key": "LYRICS_VIEW_UNFOCUSED_FONT_SIZE", "serializedType": "Double", "dartType": "double", "default": "28.0"},
+  {"key": "LYRICS_VIEW_UNFOCUSED_LINE_HEIGHT", "serializedType": "Double", "dartType": "double", "default": "1.2"},
   {"key": "MEDIA_LIBRARY_ADD_TRACKS_TO_PLAYLIST", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
   {"key": "MEDIA_LIBRARY_ALBUM_GROUPING_PARAMETERS", "serializedType": "Json", "dartType": "Set<AlbumGroupingParameter>", "default": "[AlbumGroupingParameter.album.index]"},
   {"key": "MEDIA_LIBRARY_ALBUM_SORT_ASCENDING", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
