--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,25 +18,19 @@ dependencies:
   awesome_notifications: ^0.7.0-beta.5
   collection: ^1.18.0
   crypto: ^3.0.3
-  dart_discord_rpc:
-    git:
-      url: https://github.com/alexmercerind/dart_discord_rpc.git
-      ref: 48a15a750d9ee50c521a408c466bd681321a38e2
   drift: ^2.15.0
   dynamic_color: ^1.6.9
   ffi: ^2.1.2
   file_picker: ^6.1.1
   fluentui_system_icons: ^1.1.136
-  flutter_lyric:
-    git:
-      url: https://github.com/alexmercerind/flutter_lyric.git
-      ref: master
   flutter_svg: ^1.1.4
   go_router: ^14.2.7
   http: ^1.2.1
   lrc: ^1.0.1
-  media_kit: ^1.1.10
-  media_kit_libs_audio: ^1.0.4
+  media_kit:
+    git:
+      url: https://github.com/media-kit/media-kit.git
+      path: ./media_kit
   media_library:
     path: external/media_library
   mesh_gradient: ^1.3.7
@@ -48,6 +42,7 @@ dependencies:
   path_provider: ^2.1.2
   permission_handler: ^11.3.0
   provider: ^6.0.1
+  safe_local_storage: ^2.0.1
   share_plus: ^2.1.4
   sqlite3: ^2.4.0
   sqlite3_flutter_libs: ^0.5.0
@@ -55,10 +50,10 @@ dependencies:
   syncfusion_flutter_datagrid: 24.2.7
   synchronized: ^3.0.0+2
   system_media_transport_controls:
-    path: external/smtc-win32/bindings/system_media_transport_controls.dart
+    path: external/smtc-win32/bindings/system_media_transport_controls
   tag_reader:
     path: external/tag_reader
-  uri_parser: ^2.0.2
+  uri_parser: ^3.0.0
   url_launcher: ^6.1.3
   uuid: ^4.3.3
   win32: ^5.2.0
@@ -71,6 +66,12 @@ dev_dependencies:
   build_runner: ^2.4.8
   drift_dev: ^2.15.0
   flutter_lints: ^3.0.1
+
+dependency_overrides:
+  media_kit:
+    git:
+      url: https://github.com/media-kit/media-kit.git
+      path: ./media_kit
 
 flutter:
   uses-material-design: true
