--- a/scripts/configuration_keys.json
+++ b/scripts/configuration_keys.json
@@ -1,5 +1,4 @@
 [
-  {"key": "AUDIO_FORMAT_DISPLAY", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
   {"key": "DESKTOP_NOW_PLAYING_BAR_COLOR_PALETTE", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
   {"key": "DESKTOP_NOW_PLAYING_SCREEN_CAROUSEL", "serializedType": "Integer", "dartType": "int", "default": "0"},
   {"key": "DESKTOP_NOW_PLAYING_SCREEN_LYRICS", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
@@ -27,6 +26,8 @@
   {"key": "MEDIA_LIBRARY_REFRESH_ON_LAUNCH", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
   {"key": "MEDIA_LIBRARY_TRACK_SORT_ASCENDING", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
   {"key": "MEDIA_LIBRARY_TRACK_SORT_TYPE", "serializedType": "Integer", "dartType": "TrackSortType", "default": "TrackSortType.title.index"},
+  {"key": "MEDIA_PLAYER_AUDIO_FORMAT_DISPLAY", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
+  {"key": "MEDIA_PLAYER_PLAYBACK_STATE", "serializedType": "Json", "dartType": "PlaybackState", "default": "PlaybackState.defaults()"},
   {"key": "MOBILE_ALBUM_GRID_SPAN", "serializedType": "Integer", "dartType": "int", "default": "2"},
   {"key": "MOBILE_ARTIST_GRID_SPAN", "serializedType": "Integer", "dartType": "int", "default": "3"},
   {"key": "MOBILE_GENRE_GRID_SPAN", "serializedType": "Integer", "dartType": "int", "default": "3"},
@@ -35,7 +36,6 @@
   {"key": "MPV_OPTIONS", "serializedType": "Json", "dartType": "Map<String, String>", "default": "<String, String>{}"},
   {"key": "MPV_PATH", "serializedType": "String", "dartType": "String", "default": "''"},
   {"key": "NOTIFICATION_LYRICS", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
-  {"key": "PLAYBACK_STATE", "serializedType": "Json", "dartType": "PlaybackState", "default": "PlaybackState.defaults()"},
   {"key": "THEME_ANIMATION_DURATION", "serializedType": "Json", "dartType": "AnimationDuration", "default": "const AnimationDuration()"},
   {"key": "THEME_MATERIAL_STANDARD", "serializedType": "Integer", "dartType": "int", "default": "isDesktop ? 2 : 3"},
   {"key": "THEME_MODE", "serializedType": "Integer", "dartType": "ThemeMode", "default": "ThemeMode.system.index"},
