chore: update configuration keys

--- a/scripts/configuration_keys.json
+++ b/scripts/configuration_keys.json
@@ -1,7 +1,7 @@
 [
   {"key": "DESKTOP_NOW_PLAYING_BAR_COLOR_PALETTE", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
-  {"key": "DESKTOP_NOW_PLAYING_SCREEN_CAROUSEL", "serializedType": "Integer", "dartType": "int", "default": "0"},
-  {"key": "DESKTOP_NOW_PLAYING_SCREEN_LYRICS", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
+  {"key": "DESKTOP_NOW_PLAYING_CAROUSEL", "serializedType": "Integer", "dartType": "int", "default": "0"},
+  {"key": "DESKTOP_NOW_PLAYING_LYRICS", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
   {"key": "DISCORD_RPC", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
   {"key": "LOCALIZATION", "serializedType": "Json", "dartType": "LocalizationData", "default": "const LocalizationData(code: 'en_US', name: 'English (United States)', country: 'United States')"},
   {"key": "LRC_FROM_DIRECTORY", "serializedType": "Boolean", "dartType": "bool", "default": "false"},
@@ -23,19 +23,20 @@
   {"key": "MEDIA_LIBRARY_GENRE_SORT_TYPE", "serializedType": "Integer", "dartType": "GenreSortType", "default": "GenreSortType.genre.index"},
   {"key": "MEDIA_LIBRARY_MINIMUM_FILE_SIZE", "serializedType": "Integer", "dartType": "int", "default": "0"},
   {"key": "MEDIA_LIBRARY_PATH", "serializedType": "String", "dartType": "String", "default": "kAlbumsPath"},
-  {"key": "MEDIA_LIBRARY_REFRESH_ON_LAUNCH", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
+  {"key": "MEDIA_LIBRARY_REFRESH_UPON_START", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
   {"key": "MEDIA_LIBRARY_TRACK_SORT_ASCENDING", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
   {"key": "MEDIA_LIBRARY_TRACK_SORT_TYPE", "serializedType": "Integer", "dartType": "TrackSortType", "default": "TrackSortType.title.index"},
-  {"key": "MEDIA_PLAYER_AUDIO_FORMAT_DISPLAY", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
   {"key": "MEDIA_PLAYER_PLAYBACK_STATE", "serializedType": "Json", "dartType": "PlaybackState", "default": "PlaybackState.defaults()"},
-  {"key": "MOBILE_ALBUM_GRID_SPAN", "serializedType": "Integer", "dartType": "int", "default": "2"},
-  {"key": "MOBILE_ARTIST_GRID_SPAN", "serializedType": "Integer", "dartType": "int", "default": "3"},
-  {"key": "MOBILE_GENRE_GRID_SPAN", "serializedType": "Integer", "dartType": "int", "default": "3"},
+  {"key": "MOBILE_MEDIA_LIBRARY_ALBUM_GRID_SPAN", "serializedType": "Integer", "dartType": "int", "default": "2"},
+  {"key": "MOBILE_MEDIA_LIBRARY_ARTIST_GRID_SPAN", "serializedType": "Integer", "dartType": "int", "default": "3"},
+  {"key": "MOBILE_MEDIA_LIBRARY_GENRE_GRID_SPAN", "serializedType": "Integer", "dartType": "int", "default": "3"},
   {"key": "MOBILE_NOW_PLAYING_RIPPLE", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
-  {"key": "MOBILE_NOW_PLAYING_SLIDER", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
+  {"key": "MOBILE_NOW_PLAYING_VOLUME_SLIDER", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
   {"key": "MPV_OPTIONS", "serializedType": "Json", "dartType": "Map<String, String>", "default": "<String, String>{}"},
   {"key": "MPV_PATH", "serializedType": "String", "dartType": "String", "default": "''"},
   {"key": "NOTIFICATION_LYRICS", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
+  {"key": "NOW_PLAYING_AUDIO_FORMAT", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
+  {"key": "NOW_PLAYING_DISPLAY_UPON_PLAY", "serializedType": "Boolean", "dartType": "bool", "default": "false"},
   {"key": "THEME_ANIMATION_DURATION", "serializedType": "Json", "dartType": "AnimationDuration", "default": "const AnimationDuration()"},
   {"key": "THEME_MATERIAL_STANDARD", "serializedType": "Integer", "dartType": "int", "default": "isDesktop ? 2 : 3"},
   {"key": "THEME_MODE", "serializedType": "Integer", "dartType": "ThemeMode", "default": "ThemeMode.system.index"},
