--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
     git:
       url: https://github.com/media-kit/media-kit.git
       path: ./media_kit
+  media_kit_libs_linux:
+    git:
+      url: https://github.com/media-kit/media-kit.git
+      path: ./libs/linux/media_kit_libs_linux
   media_library:
     path: external/media_library
   mesh_gradient: ^1.3.7
@@ -68,12 +72,6 @@ dev_dependencies:
   build_runner: ^2.4.8
   drift_dev: ^2.15.0
   flutter_lints: ^3.0.1
-
-dependency_overrides:
-  media_kit:
-    git:
-      url: https://github.com/media-kit/media-kit.git
-      path: ./media_kit
 
 flutter:
   uses-material-design: true
