--- a/scripts/configuration_keys.json
+++ b/scripts/configuration_keys.json
@@ -3,6 +3,7 @@
   {"key": "DESKTOP_NOW_PLAYING_CAROUSEL", "serializedType": "Integer", "dartType": "int", "default": "0"},
   {"key": "DESKTOP_NOW_PLAYING_LYRICS", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
   {"key": "DISCORD_RPC", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
+  {"key": "IDENTIFIER", "serializedType": "String", "dartType": "String", "default": "const Uuid().v4()"},
   {"key": "LOCALIZATION", "serializedType": "Json", "dartType": "LocalizationData", "default": "const LocalizationData(code: 'en_US', name: 'English (United States)', country: 'United States')"},
   {"key": "LRC_FROM_DIRECTORY", "serializedType": "Boolean", "dartType": "bool", "default": "false"},
   {"key": "LYRICS_VIEW_FOCUSED_FONT_SIZE", "serializedType": "Double", "dartType": "double", "default": "64.0"},
@@ -13,7 +14,7 @@
   {"key": "MEDIA_LIBRARY_ADD_PLAYLIST_TO_NOW_PLAYING", "serializedType": "Boolean", "dartType": "bool", "default": "false"},
   {"key": "MEDIA_LIBRARY_ALBUM_GROUPING_PARAMETERS", "serializedType": "Json", "dartType": "Set<AlbumGroupingParameter>", "default": "[AlbumGroupingParameter.album.index]"},
   {"key": "MEDIA_LIBRARY_ALBUM_SORT_ASCENDING", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
-  {"key": "MEDIA_LIBRARY_ALBUM_SORT_TYPE", "serializedType": "Integer", "dartType": "AlbumSortType", "default": "isDesktop ? AlbumSortType.albumArtist.index : AlbumSortType.album.index"},
+  {"key": "MEDIA_LIBRARY_ALBUM_SORT_TYPE", "serializedType": "Integer", "dartType": "AlbumSortType", "default": "AlbumSortType.album.index"},
   {"key": "MEDIA_LIBRARY_ARTIST_SORT_ASCENDING", "serializedType": "Boolean", "dartType": "bool", "default": "true"},
   {"key": "MEDIA_LIBRARY_ARTIST_SORT_TYPE", "serializedType": "Integer", "dartType": "ArtistSortType", "default": "ArtistSortType.artist.index"},
   {"key": "MEDIA_LIBRARY_COVER_FALLBACK", "serializedType": "Boolean", "dartType": "bool", "default": "false"},
