--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
     git:
       url: https://github.com/media-kit/media-kit.git
       path: ./libs/linux/media_kit_libs_linux
+  media_kit_libs_windows_audio:
+    git:
+      url: https://github.com/media-kit/media-kit.git
+      path: ./libs/windows/media_kit_libs_windows_audio
   media_library:
     path: external/media_library
   mesh_gradient: ^1.3.7
