--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,14 @@ dependencies:
       url: https://github.com/alexmercerind/windows_taskbar.git
       ref: b3273d58aab9d71f61b51a84d5c6fb6cf0821529
 
+dependency_overrides:
+  permission_handler_windows:
+    # Remove windows support as it causes trouble with Windows 7
+    # https://github.com/Baseflow/flutter-permission-handler/issues/1034
+    git:
+      url: https://github.com/localsend/permission_handler_windows_noop.git
+      ref: 2dadd8afbf81e0e3e4791d7144e689555e58f649
+
 dev_dependencies:
   build_runner: ^2.4.8
   drift_dev: ^2.15.0
