--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -96,8 +96,7 @@ jobs:
         run: echo ${{ steps.vars.outputs.sha_short }}
       - uses: subosito/flutter-action@v1
         with:
-          channel: "stable"
-          flutter-version: "3.24.4"
+          channel: "master"
 
       - run: sudo apt-get update
       - run: sudo apt-get install clang cmake ninja-build pkg-config libgtk-3-dev mpv libmpv-dev dpkg-dev rpm tree
