--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
     git:
       url: https://github.com/media-kit/media-kit.git
       path: ./libs/linux/media_kit_libs_linux
+  media_kit_libs_macos_audio:
+    path: ./macos/libs
   media_kit_libs_windows_audio:
     git:
       url: https://github.com/media-kit/media-kit.git
