feat(macos): file associations

--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -4,6 +4,63 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeIconSystemGenerated</key>
+			<integer>1</integer>
+			<key>CFBundleTypeName</key>
+			<string>Audio</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSHandlerRank</key>
+			<string>Default</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>public.audio</string>
+			</array>
+			<key>CFBundleTypeExtensions</key>
+            <array>
+                <string>ogg</string>
+                <string>oga</string>
+                <string>ogx</string>
+                <string>aac</string>
+                <string>m4a</string>
+                <string>mp3</string>
+                <string>wma</string>
+                <string>wav</string>
+                <string>flac</string>
+                <string>opus</string>
+                <string>aiff</string>
+                <string>ac3</string>
+                <string>adt</string>
+                <string>adts</string>
+                <string>amr</string>
+                <string>ec3</string>
+            </array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeIconSystemGenerated</key>
+			<integer>1</integer>
+			<key>CFBundleTypeName</key>
+			<string>Playlist</string>
+			<key>CFBundleTypeRole</key>
+			<string>Viewer</string>
+			<key>LSHandlerRank</key>
+			<string>Default</string>
+			<key>LSItemContentTypes</key>
+			<array>
+				<string>public.text</string>
+			</array>
+			<key>CFBundleTypeExtensions</key>
+            <array>
+                <string>m3u</string>
+                <string>m4r</string>
+                <string>wpl</string>
+                <string>zpl</string>
+            </array>
+		</dict>
+	</array>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIconFile</key>
